Updated merge function

--- a/project_1/main.ipynb
+++ b/project_1/main.ipynb
@@ -53,7 +53,7 @@
     "        self.arr_len = arr_len\n",
     "        \n",
     "    def generate_data(self):\n",
-    "        return np.random.randint(1, 100, self.arr_len)"
+    "        return np.random.randint(1, self.arr_len, self.arr_len)"
    ]
   },
   {
@@ -77,42 +77,32 @@
     "        self.execution_time = end_time - start_time\n",
     "\n",
     "    def merge(self, n, m):\n",
-    "        mid = (n+m)//2\n",
-    "        a=n\n",
-    "        b=mid+1\n",
-    "        i=None\n",
-    "        tmp=None\n",
+    "        mid = (n + m) // 2\n",
+    "        left = self.array[n:mid + 1]\n",
+    "        right = self.array[mid + 1:m + 1]\n",
     "\n",
-    "        if m-n<=0:\n",
-    "            return\n",
-    "        while a<=mid and b<=m:\n",
+    "        i = j = 0\n",
+    "        k = n\n",
+    "\n",
+    "        while i < len(left) and j < len(right):\n",
     "            self.key_cmp += 1\n",
-    "            cmp = self.array[a] - self.array[b]\n",
-    "            if cmp>0:\n",
-    "                tmp = self.array[b]\n",
-    "                b += 1\n",
-    "                mid += 1\n",
-    "                i = mid\n",
-    "                while i>a:\n",
-    "                    self.array[i] = self.array[i-1]\n",
-    "                    i -= 1\n",
-    "                self.array[a] = tmp\n",
-    "                a += 1\n",
-    "            elif cmp<0:\n",
-    "                a += 1\n",
+    "            if left[i] <= right[j]:  # Stable sort: left[i] goes first if equal\n",
+    "                self.array[k] = left[i]\n",
+    "                i += 1\n",
     "            else:\n",
-    "                if a==mid and b==m:\n",
-    "                    break\n",
-    "                tmp = self.array[b]\n",
-    "                a += 1\n",
-    "                b += 1\n",
-    "                mid += 1\n",
-    "                i = mid\n",
-    "                while i>a:\n",
-    "                    self.array[i] = self.array[i-1]\n",
-    "                    i -= 1\n",
-    "                self.array[a] = tmp\n",
-    "                a += 1\n",
+    "                self.array[k] = right[j]\n",
+    "                j += 1\n",
+    "            k += 1\n",
+    "\n",
+    "        while i < len(left):\n",
+    "            self.array[k] = left[i]\n",
+    "            i += 1\n",
+    "            k += 1\n",
+    "\n",
+    "        while j < len(right):\n",
+    "            self.array[k] = right[j]\n",
+    "            j += 1\n",
+    "            k += 1\n",
     "\n",
     "    def merge_insertion_sort(self, n, m):\n",
     "        \n",
@@ -166,57 +156,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running for arrays of length 1000\n",
-      "Running for arrays of length 101000\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m S \u001b[38;5;129;01min\u001b[39;00m S_VALUES:\n\u001b[1;32m     10\u001b[0m         model \u001b[38;5;241m=\u001b[39m Model(array, S)\n\u001b[0;32m---> 11\u001b[0m         \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m         results\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m     14\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArray Length\u001b[39m\u001b[38;5;124m\"\u001b[39m: arr_len,\n\u001b[1;32m     15\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThreshold\u001b[39m\u001b[38;5;124m\"\u001b[39m: S,\n\u001b[1;32m     16\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExecution Time\u001b[39m\u001b[38;5;124m\"\u001b[39m: model\u001b[38;5;241m.\u001b[39mexecution_time,\n\u001b[1;32m     17\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKey Comparisons\u001b[39m\u001b[38;5;124m\"\u001b[39m: model\u001b[38;5;241m.\u001b[39mkey_cmp\n\u001b[1;32m     18\u001b[0m         })\n\u001b[1;32m     20\u001b[0m df_results \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(results)\n",
-      "Cell \u001b[0;32mIn[4], line 11\u001b[0m, in \u001b[0;36mModel.train\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkey_cmp \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     10\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge_insertion_sort\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m end_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexecution_time \u001b[38;5;241m=\u001b[39m end_time \u001b[38;5;241m-\u001b[39m start_time\n",
-      "Cell \u001b[0;32mIn[4], line 64\u001b[0m, in \u001b[0;36mModel.merge_insertion_sort\u001b[0;34m(self, n, m)\u001b[0m\n\u001b[1;32m     62\u001b[0m mid \u001b[38;5;241m=\u001b[39m (n\u001b[38;5;241m+\u001b[39mm)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (m\u001b[38;5;241m-\u001b[39mn\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 64\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge_insertion_sort\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge_insertion_sort(mid\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, m)\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge(n, m)\n",
-      "Cell \u001b[0;32mIn[4], line 64\u001b[0m, in \u001b[0;36mModel.merge_insertion_sort\u001b[0;34m(self, n, m)\u001b[0m\n\u001b[1;32m     62\u001b[0m mid \u001b[38;5;241m=\u001b[39m (n\u001b[38;5;241m+\u001b[39mm)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (m\u001b[38;5;241m-\u001b[39mn\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 64\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge_insertion_sort\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge_insertion_sort(mid\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, m)\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge(n, m)\n",
-      "Cell \u001b[0;32mIn[4], line 64\u001b[0m, in \u001b[0;36mModel.merge_insertion_sort\u001b[0;34m(self, n, m)\u001b[0m\n\u001b[1;32m     62\u001b[0m mid \u001b[38;5;241m=\u001b[39m (n\u001b[38;5;241m+\u001b[39mm)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (m\u001b[38;5;241m-\u001b[39mn\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 64\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge_insertion_sort\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge_insertion_sort(mid\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, m)\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge(n, m)\n",
-      "Cell \u001b[0;32mIn[4], line 65\u001b[0m, in \u001b[0;36mModel.merge_insertion_sort\u001b[0;34m(self, n, m)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (m\u001b[38;5;241m-\u001b[39mn\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge_insertion_sort(n, mid)\n\u001b[0;32m---> 65\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge_insertion_sort\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmid\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge(n, m)\n",
-      "Cell \u001b[0;32mIn[4], line 67\u001b[0m, in \u001b[0;36mModel.merge_insertion_sort\u001b[0;34m(self, n, m)\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge_insertion_sort(n, mid)\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmerge_insertion_sort(mid\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, m)\n\u001b[0;32m---> 67\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[4], line 47\u001b[0m, in \u001b[0;36mModel.merge\u001b[0;34m(self, n, m)\u001b[0m\n\u001b[1;32m     45\u001b[0m mid \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     46\u001b[0m i \u001b[38;5;241m=\u001b[39m mid\n\u001b[0;32m---> 47\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m i\u001b[38;5;241m>\u001b[39ma:\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     49\u001b[0m     i \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "{'Array Length': 100000, 'Threshold': 30, 'Execution Time': 375.7347978730104, 'Key Comparisons': 1822856}\n"
      ]
     }
    ],
    "source": [
-    "results = []\n",
+    "dataloader = DataLoader(arr_len=100000)\n",
+    "array = dataloader.generate_data()\n",
+    "model = Model(array, 30)\n",
+    "model.train()\n",
     "\n",
-    "for arr_len in ARR_LENS:\n",
-    "    print(f\"Running for arrays of length {arr_len}\")\n",
-    "    dataloader = DataLoader(arr_len=arr_len)\n",
-    "    array = dataloader.generate_data()\n",
-    "    \n",
-    "    for S in S_VALUES:\n",
-    "        \n",
-    "        model = Model(array, S)\n",
-    "        model.train()\n",
-    "        \n",
-    "        results.append({\n",
-    "            \"Array Length\": arr_len,\n",
-    "            \"Threshold\": S,\n",
-    "            \"Execution Time\": model.execution_time,\n",
-    "            \"Key Comparisons\": model.key_cmp\n",
-    "        })\n",
+    "result = {\n",
+    "    \"Array Length\": 100000,\n",
+    "    \"Threshold\": 30,\n",
+    "    \"Execution Time\": model.execution_time,\n",
+    "    \"Key Comparisons\": model.key_cmp\n",
+    "}\n",
     "\n",
-    "df_results = pd.DataFrame(results)\n",
-    "\n",
-    "df_results.to_parquet(\"sorting_experiment_results.parquet\", index=False)"
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# results = []\n",
+    "\n",
+    "# for arr_len in ARR_LENS:\n",
+    "#     print(f\"Running for arrays of length {arr_len}\")\n",
+    "#     dataloader = DataLoader(arr_len=arr_len)\n",
+    "#     array = dataloader.generate_data()\n",
+    "    \n",
+    "#     for S in S_VALUES:\n",
+    "        \n",
+    "#         model = Model(array, S)\n",
+    "#         model.train()\n",
+    "        \n",
+    "#         results.append({\n",
+    "#             \"Array Length\": arr_len,\n",
+    "#             \"Threshold\": S,\n",
+    "#             \"Execution Time\": model.execution_time,\n",
+    "#             \"Key Comparisons\": model.key_cmp\n",
+    "#         })\n",
+    "\n",
+    "# df_results = pd.DataFrame(results)\n",
+    "\n",
+    "# df_results.to_parquet(\"sorting_experiment_results.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
