Updated merge function with temp array

--- a/project_1/main.ipynb
+++ b/project_1/main.ipynb
@@ -4,32 +4,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rachtrx/mambaforge/envs/sc1015/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/rachm/OneDrive/projects/personal_projects/sc2001/project_1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import optuna\n",
-    "import os\n",
     "import pandas as pd\n",
     "import time\n",
-    "\n",
-    "working_dir = os.getcwd()\n",
-    "print(working_dir)\n"
+    "from multiprocessing import Pool, cpu_count\n",
+    "from tqdm import tqdm\n",
+    "import logging"
    ]
   },
   {
@@ -38,13 +20,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ARR_LENS = list(range(0, 1_000_001, 100_000))\n",
-    "S_VALUES = list(range(10, 101, 10)) # 10 to 100"
+    "logging.basicConfig(\n",
+    "    filename=\"experiments.log\",\n",
+    "    filemode=\"w\",\n",
+    "    level=logging.INFO,\n",
+    "    format=\"%(asctime)s - %(levelname)s - %(message)s\" \n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ARR_LENS = list(range(0, 10_000_001, 100_000))\n",
+    "S_VALUES = list(range(10, 101, 10)) # 10 to 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,31 +74,32 @@
     "\n",
     "    def merge(self, n, m):\n",
     "        mid = (n + m) // 2\n",
-    "        left = self.array[n:mid + 1]\n",
-    "        right = self.array[mid + 1:m + 1]\n",
+    "        left = self.array[n:mid + 1]  # Left half\n",
+    "        right = self.array[mid + 1:m + 1]  # Right half\n",
     "\n",
     "        i = j = 0\n",
-    "        k = n\n",
+    "\n",
+    "        temp = []\n",
     "\n",
     "        while i < len(left) and j < len(right):\n",
     "            self.key_cmp += 1\n",
     "            if left[i] <= right[j]:  # Stable sort: left[i] goes first if equal\n",
-    "                self.array[k] = left[i]\n",
+    "                temp.append(left[i])\n",
     "                i += 1\n",
     "            else:\n",
-    "                self.array[k] = right[j]\n",
+    "                temp.append(right[j])\n",
     "                j += 1\n",
-    "            k += 1\n",
     "\n",
+    "        # Add any remaining elements\n",
     "        while i < len(left):\n",
-    "            self.array[k] = left[i]\n",
+    "            temp.append(left[i])\n",
     "            i += 1\n",
-    "            k += 1\n",
     "\n",
     "        while j < len(right):\n",
-    "            self.array[k] = right[j]\n",
+    "            temp.append(right[j])\n",
     "            j += 1\n",
-    "            k += 1\n",
+    "\n",
+    "        self.array[n:m+1] = temp\n",
     "\n",
     "    def merge_insertion_sort(self, n, m):\n",
     "        \n",
@@ -149,105 +146,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Array Length': 100000, 'Threshold': 30, 'Execution Time': 375.7347978730104, 'Key Comparisons': 1822856}\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataloader = DataLoader(arr_len=100000)\n",
-    "array = dataloader.generate_data()\n",
-    "model = Model(array, 30)\n",
-    "model.train()\n",
-    "\n",
-    "result = {\n",
-    "    \"Array Length\": 100000,\n",
-    "    \"Threshold\": 30,\n",
-    "    \"Execution Time\": model.execution_time,\n",
-    "    \"Key Comparisons\": model.key_cmp\n",
-    "}\n",
-    "\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# results = []\n",
+    "def run_experiment(args):\n",
+    "    arr_len, S = args\n",
+    "    dataloader = DataLoader(arr_len=arr_len)\n",
+    "    array = dataloader.generate_data()\n",
     "\n",
-    "# for arr_len in ARR_LENS:\n",
-    "#     print(f\"Running for arrays of length {arr_len}\")\n",
-    "#     dataloader = DataLoader(arr_len=arr_len)\n",
-    "#     array = dataloader.generate_data()\n",
-    "    \n",
-    "#     for S in S_VALUES:\n",
-    "        \n",
-    "#         model = Model(array, S)\n",
-    "#         model.train()\n",
-    "        \n",
-    "#         results.append({\n",
-    "#             \"Array Length\": arr_len,\n",
-    "#             \"Threshold\": S,\n",
-    "#             \"Execution Time\": model.execution_time,\n",
-    "#             \"Key Comparisons\": model.key_cmp\n",
-    "#         })\n",
+    "    model = Model(array, S)\n",
     "\n",
-    "# df_results = pd.DataFrame(results)\n",
+    "    logging.info(f\"Starting sort for arr_len={arr_len} with S={S}\")\n",
+    "    model.train()\n",
+    "    logging.info(f\"Completed sort for arr_len={arr_len} with S={S}\")\n",
     "\n",
-    "# df_results.to_parquet(\"sorting_experiment_results.parquet\", index=False)"
+    "    return {\n",
+    "        \"Array Length\": arr_len,\n",
+    "        \"Threshold\": S,\n",
+    "        \"Execution Time\": model.execution_time,\n",
+    "        \"Key Comparisons\": model.key_cmp\n",
+    "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Arrays:  41%|████▏     | 419/1010 [03:47<15:29,  1.57s/it]"
+     ]
+    }
+   ],
    "source": [
-    "# PARALLEL\n",
+    "experiments = [(arr_len, S) for arr_len in ARR_LENS for S in S_VALUES]\n",
     "\n",
-    "# from multiprocessing import Pool, cpu_count\n",
-    "# from tqdm import tqdm\n",
-    "# import pandas as pd\n",
+    "with Pool(cpu_count()) as pool:\n",
+    "    results = list(tqdm(pool.imap(run_experiment, experiments), total=len(experiments), desc=\"Processing Arrays\"))\n",
     "\n",
-    "# def run_experiment(args):\n",
-    "#     arr_len, S = args\n",
-    "#     dataloader = DataLoader(arr_len=arr_len)\n",
-    "#     array = dataloader.generate_data()\n",
+    "df_results = pd.DataFrame(results)\n",
+    "df_results.to_parquet(\"results.parquet\", index=False)\n",
     "\n",
-    "#     model = Model(array, S)\n",
-    "#     model.train()\n",
-    "\n",
-    "#     return {\n",
-    "#         \"Array Length\": arr_len,\n",
-    "#         \"Threshold\": S,\n",
-    "#         \"Execution Time\": model.execution_time,\n",
-    "#         \"Key Comparisons\": model.key_cmp\n",
-    "#     }\n",
-    "\n",
-    "# experiments = [(arr_len, S) for arr_len in ARR_LENS for S in S_VALUES]\n",
-    "\n",
-    "# with Pool(cpu_count()) as pool:\n",
-    "#     results = list(tqdm(pool.imap(run_experiment, experiments), total=len(experiments), desc=\"Processing Arrays\"))\n",
-    "\n",
-    "# df_results = pd.DataFrame(results)\n",
-    "# df_results.to_parquet(\"results.parquet\", index=False)\n",
-    "\n",
-    "# print(\"Execution complete\")\n"
+    "print(\"Execution complete\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sc1015",
+   "display_name": "hft",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
