--- a/project_1/main.ipynb
+++ b/project_1/main.ipynb
@@ -178,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Arrays:  41%|████▏     | 419/1010 [03:47<15:29,  1.57s/it]"
+      "Processing Arrays: 100%|██████████| 1010/1010 [16:16<00:00,  1.03it/s]"
      ]
     }
    ],
