--- a/project_1/main.ipynb
+++ b/project_1/main.ipynb
@@ -74,8 +74,8 @@
     "\n",
     "    def merge(self, n, m):\n",
     "        mid = (n + m) // 2\n",
-    "        left = self.array[n:mid + 1]  # Left half\n",
-    "        right = self.array[mid + 1:m + 1]  # Right half\n",
+    "        left = self.array[n:mid + 1]\n",
+    "        right = self.array[mid + 1:m + 1]\n",
     "\n",
     "        i = j = 0\n",
     "\n",
@@ -99,7 +99,9 @@
     "            temp.append(right[j])\n",
     "            j += 1\n",
     "\n",
+    "        # Copy merged values back into original array\n",
     "        self.array[n:m+1] = temp\n",
+    "\n",
     "\n",
     "    def merge_insertion_sort(self, n, m):\n",
     "        \n",
@@ -171,17 +173,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Arrays: 100%|██████████| 1010/1010 [16:16<00:00,  1.03it/s]"
+      "[16 17  3 19 19 27  6 25 14 15 23 27 27 13 29 12 15 16  8  4  9  5 27 27\n",
+      " 10 29 23  6  1 12]\n",
+      "[ 1  3  4  5  6  6  8  9 10 12 12 13 14 15 15 16 16 17 19 19 23 23 25 27\n",
+      " 27 27 27 27 29 29]\n"
      ]
     }
    ],
+   "source": [
+    "arr_len = 30\n",
+    "S=3\n",
+    "\n",
+    "dataloader = DataLoader(arr_len=arr_len)\n",
+    "array = dataloader.generate_data()\n",
+    "\n",
+    "model = Model(array, S)\n",
+    "\n",
+    "print(model.array)\n",
+    "model.train()\n",
+    "print(model.array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "experiments = [(arr_len, S) for arr_len in ARR_LENS for S in S_VALUES]\n",
     "\n",
