--- a/project_1/main.ipynb
+++ b/project_1/main.ipynb
@@ -168,7 +168,7 @@
     "        \"Threshold\": S,\n",
     "        \"Execution Time\": model.execution_time,\n",
     "        \"Key Comparisons\": model.key_cmp\n",
-    "    }\n"
+    "    }"
    ]
   },
   {
@@ -180,14 +180,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[16 17  3 19 19 27  6 25 14 15 23 27 27 13 29 12 15 16  8  4  9  5 27 27\n",
-      " 10 29 23  6  1 12]\n",
-      "[ 1  3  4  5  6  6  8  9 10 12 12 13 14 15 15 16 16 17 19 19 23 23 25 27\n",
-      " 27 27 27 27 29 29]\n"
+      "[24 28  2  8  6 11 16 29 19 20 15  3 11 24 25 19 17  5  3  6 16 23 19 11\n",
+      " 22 11 16 12 27 17]\n",
+      "[ 2  3  3  5  6  6  8 11 11 11 11 12 15 16 16 16 17 17 19 19 19 20 22 23\n",
+      " 24 24 25 27 28 29]\n"
      ]
     }
    ],
    "source": [
+    "# TEST\n",
     "arr_len = 30\n",
     "S=3\n",
     "\n",
@@ -205,7 +206,22 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Arrays: 100%|██████████| 1010/1010 [16:22<00:00,  1.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution complete\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = [(arr_len, S) for arr_len in ARR_LENS for S in S_VALUES]\n",
     "\n",
