--- a/project_1/baseline.ipynb
+++ b/project_1/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "ARR_LENS = list(range(100_000, 10_000_001, 100_000))\n",
-    "S_VALUES = list(range(10, 101, 10)) # 10 to 100"
+    "S_VALUES = list(range(1, 100, 2)) # 1 - 99"
    ]
   },
   {
@@ -183,10 +183,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[24 28  2  8  6 11 16 29 19 20 15  3 11 24 25 19 17  5  3  6 16 23 19 11\n",
-      " 22 11 16 12 27 17]\n",
-      "[ 2  3  3  5  6  6  8 11 11 11 11 12 15 16 16 16 17 17 19 19 19 20 22 23\n",
-      " 24 24 25 27 28 29]\n"
+      "[25 12 26 13 24 21 28 27 24 17 12 22 18  4 23 28 28 23  9 27  4  1 16 25\n",
+      " 18 26  6  7 24 28]\n",
+      "[ 1  4  4  6  7  9 12 12 13 16 17 18 18 21 22 23 23 24 24 24 25 25 26 26\n",
+      " 27 27 28 28 28 28]\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Arrays: 100%|██████████| 1010/1010 [16:22<00:00,  1.03it/s]\n"
+      "Processing Arrays: 100%|██████████| 5000/5000 [1:16:03<00:00,  1.10it/s]\n"
      ]
     },
     {
