Testing issue with threshold values

--- a/project_1/baseline.ipynb
+++ b/project_1/baseline.ipynb
@@ -52,7 +52,7 @@
     "        self.arr_len = arr_len\n",
     "        \n",
     "    def generate_data(self):\n",
-    "        return np.random.randint(1, self.arr_len, self.arr_len)"
+    "        return np.random.permutation(np.arange(1, self.arr_len + 1))"
    ]
   },
   {
@@ -68,6 +68,14 @@
     "        self.array = array\n",
     "\n",
     "    def train(self):\n",
+    "        self.execution_time = None\n",
+    "        self.key_cmp = 0\n",
+    "        start_time = time.perf_counter()\n",
+    "        self.merge_sort(0, len(self.array)-1)\n",
+    "        end_time = time.perf_counter()\n",
+    "        self.execution_time = end_time - start_time\n",
+    "\n",
+    "    def train_hybrid(self):\n",
     "        self.execution_time = None\n",
     "        self.key_cmp = 0\n",
     "        start_time = time.perf_counter()\n",
@@ -163,7 +171,7 @@
     "    model = Model(array, S)\n",
     "\n",
     "    logging.info(f\"Starting sort for arr_len={arr_len} with S={S}\")\n",
-    "    model.train()\n",
+    "    model.train_hybrid()\n",
     "    logging.info(f\"Completed sort for arr_len={arr_len} with S={S}\")\n",
     "\n",
     "    return {\n",
