Issue with optimal S

--- a/project_1/merge.ipynb
+++ b/project_1/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "logging.basicConfig(\n",
-    "    filename=\"baseline.log\",\n",
+    "    filename=\"merge.log\",\n",
     "    filemode=\"w\",\n",
     "    level=logging.INFO,\n",
     "    format=\"%(asctime)s - %(levelname)s - %(message)s\" \n",
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_experiment(args):\n",
-    "    arr_len, S = args\n",
+    "    arr_len = args\n",
     "    dataloader = DataLoader(arr_len=arr_len)\n",
     "    array = dataloader.generate_data()\n",
     "\n",
-    "    model = Model(array, S)\n",
+    "    model = Model(array)\n",
     "\n",
     "    logging.info(f\"Starting sort for arr_len={arr_len} with S={S}\")\n",
     "    model.train()\n",
@@ -53,7 +53,6 @@
     "\n",
     "    return {\n",
     "        \"Array Length\": arr_len,\n",
-    "        \"Threshold\": S,\n",
     "        \"Execution Time\": model.execution_time,\n",
     "        \"Key Comparisons\": model.key_cmp\n",
     "    }"
@@ -61,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[29 22 11 25 24 16 23  9 18 28  3 17 21 27  1  4 10 14  6 30 15 26  5 13\n",
-      " 20 19  2 12  8  7]\n",
+      "[ 5 26  8  1 16 20  6 27  9  3 12  4 11 23 22 18 29 17 19 21 25 24 15 13\n",
+      " 28 14  2 10 30  7]\n",
       "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24\n",
       " 25 26 27 28 29 30]\n"
      ]
@@ -83,7 +82,7 @@
     "dataloader = DataLoader(arr_len=arr_len)\n",
     "array = dataloader.generate_data()\n",
     "\n",
-    "model = Model(array, S)\n",
+    "model = Model(array)\n",
     "\n",
     "print(model.array)\n",
     "model.train()\n",
@@ -92,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Arrays: 100%|██████████| 5000/5000 [1:16:40<00:00,  1.09it/s]\n"
+      "Processing Arrays: 100%|██████████| 100/100 [01:40<00:00,  1.00s/it]\n"
      ]
     },
     {
@@ -111,13 +110,11 @@
     }
    ],
    "source": [
-    "experiments = [(arr_len, S) for arr_len in ARR_LENS for S in S_VALUES]\n",
-    "\n",
     "with Pool(cpu_count()) as pool:\n",
-    "    results = list(tqdm(pool.imap(run_experiment, experiments), total=len(experiments), desc=\"Processing Arrays\"))\n",
+    "    results = list(tqdm(pool.imap(run_experiment, ARR_LENS), total=len(ARR_LENS), desc=\"Processing Arrays\"))\n",
     "\n",
     "df_results = pd.DataFrame(results)\n",
-    "df_results.to_parquet(\"baseline.parquet\", index=False)\n",
+    "df_results.to_parquet(\"merge.parquet\", index=False)\n",
     "\n",
     "print(\"Execution complete\")"
    ]
