--- a/project_1/merge.ipynb
+++ b/project_1/merge.ipynb
@@ -36,20 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_experiment(args):\n",
-    "    arr_len = args\n",
+    "    arr_len, S = args\n",
     "    dataloader = DataLoader(arr_len=arr_len)\n",
     "    array = dataloader.generate_data()\n",
     "\n",
-    "    model = Model(array)\n",
-    "\n",
     "    logging.info(f\"Starting sort for arr_len={arr_len} with S={S}\")\n",
-    "    model.train()\n",
+    "    model = Model(array, S)\n",
     "    logging.info(f\"Completed sort for arr_len={arr_len} with S={S}\")\n",
+    "\n",
+    "    model.train()\n",
     "\n",
     "    return {\n",
     "        \"Array Length\": arr_len,\n",
@@ -60,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5 26  8  1 16 20  6 27  9  3 12  4 11 23 22 18 29 17 19 21 25 24 15 13\n",
-      " 28 14  2 10 30  7]\n",
+      "[20 30  3 18 23  5  8 28 21 25 29 22  4 26 19 13  6  2 15  9 27 10 11 14\n",
+      " 16  1 17 24 12  7]\n",
       "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24\n",
       " 25 26 27 28 29 30]\n"
      ]
@@ -82,7 +82,7 @@
     "dataloader = DataLoader(arr_len=arr_len)\n",
     "array = dataloader.generate_data()\n",
     "\n",
-    "model = Model(array)\n",
+    "model = Model(array, S)\n",
     "\n",
     "print(model.array)\n",
     "model.train()\n",
@@ -91,27 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Arrays: 100%|██████████| 100/100 [01:40<00:00,  1.00s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Execution complete\n"
+      "Processing Arrays:   0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     }
    ],
    "source": [
+    "experiments = [(10_000_000, 7), (10_000_000, 1)]\n",
+    "\n",
     "with Pool(cpu_count()) as pool:\n",
-    "    results = list(tqdm(pool.imap(run_experiment, ARR_LENS), total=len(ARR_LENS), desc=\"Processing Arrays\"))\n",
+    "    results = list(tqdm(pool.imap(run_experiment, experiments), total=len(experiments), desc=\"Processing Arrays\"))\n",
     "\n",
     "df_results = pd.DataFrame(results)\n",
     "df_results.to_parquet(\"merge.parquet\", index=False)\n",
@@ -122,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hft",
+   "display_name": "sc1015",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
