--- a/project_1/analysis.ipynb
+++ b/project_1/analysis.ipynb
@@ -464,7 +464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hft",
+   "display_name": "sc1015",
    "language": "python",
    "name": "python3"
   },
@@ -478,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
