tested with new values

--- a/project_3/main.ipynb
+++ b/project_3/main.ipynb
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 0.000010 seconds\n",
+      "Execution time: 0.000014 seconds\n",
       "Maximum Profit: 21\n",
       "Items Chosen (indices): [0, 0, 0]\n"
      ]
@@ -145,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 0.000016 seconds\n",
+      "Execution time: 0.000013 seconds\n",
       "Maximum Profit: 21\n",
       "Items Chosen (indices): [0, 0, 0]\n"
      ]
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 0.000009 seconds\n",
+      "Execution time: 0.000010 seconds\n",
       "Maximum Profit: 16\n",
       "Items Chosen (indices): [0, 2]\n"
      ]
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 0.000018 seconds\n",
+      "Execution time: 0.000031 seconds\n",
       "Maximum Profit: 16\n",
       "Items Chosen (indices): [0, 2]\n"
      ]
@@ -208,6 +208,87 @@
     "print(\"Maximum Profit:\", max_profit)\n",
     "print(\"Items Chosen (indices):\", chosen)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing with random weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights = [4, 5, 6, 9, 11, 14, 15, 16, 17, 19]\n",
+      "profits = [2, 3, 5, 6, 8, 9, 10, 13, 16, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "n = 10\n",
+    "weights = sorted(random.sample(range(2, 20), n))\n",
+    "profits = sorted(random.sample(range(2, 20), n))\n",
+    "\n",
+    "print(\"weights =\", weights)\n",
+    "print(\"profits =\", profits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 0.276128 seconds\n",
+      "Maximum Profit: 45\n",
+      "Items Chosen (indices): [7, 8, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_profit, chosen = unbounded_knapsack_recursive(weights, profits, 50)\n",
+    "print(\"Maximum Profit:\", max_profit)\n",
+    "print(\"Items Chosen (indices):\", chosen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 0.000062 seconds\n",
+      "Maximum Profit: 45\n",
+      "Items Chosen (indices): [7, 8, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_profit, chosen = unbounded_knapsack(weights, profits, 50)\n",
+    "print(\"Maximum Profit:\", max_profit)\n",
+    "print(\"Items Chosen (indices):\", chosen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
